fix: Fix code quality issues in stdlib classes
- Fixed deprecated URL constructors in GrayscalePicture and StdDraw
- Used URI.create().toURL() pattern consistently for URL creation
- Improved error handling with proper exception catching
- Fixed unused variables in MM1Queue by displaying statistics on canvas
- Removed unused constants in StdAudio (BIG_ENDIAN and UNSIGNED)